--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --lightblue: #B0D4D4;
+  --blue: #3A88B6;
+  --darkblue: #383C64;
+  --lightgrey: #C2C1BB;
+  --darkgrey: #5C615F;
+  --black: #0D0F10;
+}
+
 html, * {
   margin: 0;
   padding: 0;
